Got audio input working

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> </title>
@@ -10,8 +8,14 @@
 </head>
 
 <body>
-    <header>
-    </header>
+    <header></header>
+    <div class='on-off'>
+      <div class='audio-on'>ON</div>
+      <div class='audio-off'>OFF</div>
+    </div>
+
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
     <script src="scripts/main.js" charset="utf-8"></script>
 </body>
