Hooked up audio!

--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
 
 <body>
     <header></header>
-    <div class='on-off'>
-      <div class='audio-on'>ON</div>
-      <div class='audio-off'>OFF</div>
+
+    <h1>JavaScript Delay</h1>
+    <div class='js-delay'>
+        <div class='top-controls'>
+          <div id='on-off' class='audio-on'>ON/OFF</div>
+          <div class='volume-container'>
+            <h2> Volume </h2>
+            <div id='volume'></div>
+          </div>
+        </div>
+        <div class='waveform'></div>
     </div>
 
-    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+
     <script src="scripts/main.js" charset="utf-8"></script>
 </body>
 
