Oscilloscope responds to changes in volume

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class='js-delay'>
         <div class='top-controls'>
           <div id='on-off' class='audio-on'>ON/OFF</div>
+          <canvas class='waveform'></canvas>
           <div class='volume-container'>
-            <h2> Volume </h2>
             <div id='volume'></div>
+            <h2> Volume </h2>
           </div>
         </div>
-        <div class='waveform'></div>
     </div>
 
 
