got more delay functionality

--- a/index.html
+++ b/index.html
@@ -26,18 +26,24 @@
       </div>
     </div>
     <div class='delay-effect'>
-      <h2> Delay </h2>
-      <div class='delay-controls'>
-        <div class='delay-on-container'/>
-          <div id='delay-on-off' class='delay-off'>OFF</div>
-        </div>
-        <div class='delay-speed-slider-container'>
-          <h3> Speed </h3>
-          <div id='delay-time'></div>
-        </div>
-        <div class='delay-intensity-slider-container'>
-          <h3> Intensity </h3>
-          <div id='delay-intensity'></div>
+      <div class='delay-container'>
+        <h2> Delay </h2>
+        <div class='delay-controls'>
+          <div class='delay-on-container'/>
+            <div id='delay-on-off' class='delay-off'>OFF</div>
+          </div>
+          <div class='delay-speed-slider-container'>
+            <h3> Speed </h3>
+            <div id='delay-time'></div>
+          </div>
+          <div class='delay-intensity-slider-container'>
+            <h3> Intensity </h3>
+            <div id='delay-intensity'></div>
+          </div>
+          <div class='delay-filter-slider-container'>
+            <h3> Filter </h3>
+            <div id='delay-filter'></div>
+          </div>
         </div>
       </div>
     </div>
