progress on tremolo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header></header>
 
-    <h1>JavaScript Delay</h1>
+    <!-- <h1>JavaScript Delay</h1> -->
     <div class='volume-effect'>
       <h2> Volume </h2>
       <div class='volume-controls'>
@@ -37,13 +37,35 @@
             <div id='delay-time'></div>
           </div>
           <div class='delay-intensity-slider-container'>
-            <h3> Intensity </h3>
+            <h3> Length </h3>
             <div id='delay-intensity'></div>
+          </div>
+          </div>
+          <div class='delay-bypass-slider-container'>
+            <h3> Level </h3>
+            <div id='delay-bypass'></div>
           </div>
           <div class='delay-filter-slider-container'>
             <h3> Filter </h3>
             <div id='delay-filter'></div>
-          </div>
+        </div>
+      </div>
+    </div>
+    <div class='tremolo-effect'>
+      <h2> Tremolo </h2>
+      <div class='tremelo-controls'>
+        <div class='tremolo-on-container'/>
+          <div id='tremolo-on-off' class='tremolo-off'>OFF</div>
+        </div>
+        
+        <div class='tremolo-depth-slider-container'>
+          <h3> Depth </h3>
+          <div id='tremolo-depth'></div>
+        </div>
+
+        <div class='tremolo-speed-slider-container'>
+          <h3> Speed </h3>
+          <div id='tremolo-speed'></div>
         </div>
       </div>
     </div>
