--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     </div>
     <div class='tremolo-effect'>
       <h2> Tremolo </h2>
-      <div class='tremelo-controls'>
+      <div class='tremolo-controls'>
         <div class='tremolo-on-container'/>
           <div id='tremolo-on-off' class='tremolo-off'>OFF</div>
         </div>
-        
+
         <div class='tremolo-depth-slider-container'>
           <h3> Depth </h3>
           <div id='tremolo-depth'></div>
