add portfolio links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header></header>
 
-    <!-- <h1>JavaScript Delay</h1> -->
+    <h1>JavaScript Delay</h1>
     <div class='volume-effect'>
       <h2> Volume </h2>
       <div class='volume-controls'>
