--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> </title>
+    <script src="https://use.fontawesome.com/851d5e5f47.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -15,6 +16,31 @@
       <a target='_blank' href='http://www.github.com/joetessy/WebFX'>
         <i class="devicon-github-plain"></i>
       </a>
+      <h2> WARNING </h2>
+      <p>If using a microphone plug in headphones to avoid a feedback loop</p>
+
+      <h2> Instructions <h3>
+      <p> Turn on audio, then trigger samples - Enjoy! <p>
+
+      <div class='samples'>
+        <li>
+          Sample 1: <div class='sample-item' id='play1'>
+            <i class="fa fa-play"></i>
+          </div>
+        </li>
+        <li>
+        Sample 2: <div class='sample-item' id='play2'>
+          <i class="fa fa-play"></i>
+        </div>
+        </li>
+        <li>
+        Sample 3: <div class='sample-item' id='play3'>
+          <i class="fa fa-play"></i>
+        </div>
+        </li>
+      </div>
+
+
 
     </div>
     <div class=effects>
