made it prettier!

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 Plug in headphones
               </li>
               <li>
-                Select 'Input On'
+                Select 'Input On' below
               </li>
               <li>
-                Turn audio on in volume controls
+                Click 'ON' button in volume module
               </li>
             </ul>
           </div>
