trying something new for recording
ok

changed save

remove saveAudio click handler from save button

changed save again

Recording Check

--- a/index.html
+++ b/index.html
@@ -149,9 +149,11 @@
     <div class='record'>
       <h2>Record</h2>
       <div class='record-off recorder' onclick='handleRecord()'></div>
-      <div class='save hide' onclick='saveAudio()'>
-        SAVE
-      </div>
+      <a id="save" href="#">
+        <div class='save'>
+          SAVE
+        </div>
+      </a>
     <div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
