--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class='content'>
     <div class='info'>
       <h1> WebFX </h1>
-      <a target='_blank' href='http://www.github.com/joetessy/WebFX'>
+      <a target='_blank' class='github-link' href='http://www.github.com/joetessy/WebFX'>
         <i class="devicon-github-plain"></i>
       </a>
       <div class='instructions-container'>
@@ -29,7 +29,7 @@
                 Plug in headphones
               </li>
               <li>
-                Select 'Input On' below
+                Select 'Input On'
               </li>
               <li>
                 Click 'ON' button in volume module
@@ -40,46 +40,51 @@
         <div class='instructions'>
           <ul>
             <li>
-              Turn on audio in volume Controls
+              Click 'ON' button in volume module
             </li>
             <li>
-              Trigger samples by clicking play button
+              Trigger samples with play buttons
             </li>
           </ul>
         </div>
       </div>
       <div class='user-controls'>
-        <div class='select-input'>
-          <li>
-            <input type="radio"
-            name="input"
-            value="off"
-            onclick='initAudio()'> <h3>Input On</h3>
-          </li>
-          <li>
-            <input type="radio" checked name="input" value="on"
-              onclick='cancelAudio()'> <h3>Input Off</h3><br>
-          </li>
-        </div>
-        <div class='samples'>
-          <li>
-            <h3>Sample 1: </h3><div class='sample-item' id='play1'>
-              <i class="fa fa-play"></i>
-            </div>
-          </li>
-          <li>
-          <h3>Sample 2: </h3><div class='sample-item' id='play2'>
-            <i class="fa fa-play"></i>
+        <div class='controls-container'>
+          <div class='select-input'>
+            <li>
+              <input type="radio"
+              name="input"
+              value="off"
+              onclick='initAudio()'> <h3>Input On</h3>
+            </li>
+            <li>
+              <input type="radio" checked name="input" value="on"
+                onclick='cancelAudio()'> <h3>Input Off</h3><br>
+            </li>
           </div>
-          </li>
-          <li>
-          <h3>Sample 3: </h3><div class='sample-item' id='play3'>
-            <i class="fa fa-play"></i>
+          <div class='samples'>
+            <ul>
+              <li>
+                <h3>Sample 1: </h3><div class='sample-item' id='play1'>
+                  <i class="fa fa-play"></i>
+                </div>
+              </li>
+              <li>
+              <h3>Sample 2: </h3><div class='sample-item' id='play2'>
+                <i class="fa fa-play"></i>
+              </div>
+              </li>
+              <li>
+              <h3>Sample 3: </h3><div class='sample-item' id='play3'>
+                <i class="fa fa-play"></i>
+              </div>
+              </li>
+            </ul>
           </div>
-          </li>
         </div>
-        </div>
-      <a target='_blank'
+      </div>
+
+      <a class='site-button' target='_blank'
         href='https://www.joetessy.life'>
         <div class=site-link>
           <h2> by Joe Tessy</h2>
@@ -146,14 +151,16 @@
         </div>
       </div>
     </div>
-    <div class='record'>
-      <h2>Record</h2>
-      <div class='record-off recorder' onclick='handleRecord()'></div>
-      <a id="save" href="#">
-        <div class='save'>
-          SAVE
-        </div>
-      </a>
+    <div class='user-options'>
+      <div class='recording-module'>
+        <h2>Record</h2>
+        <div class='record-off recorder' onclick='handleRecord()'></div>
+        <a id="save" href="#">
+          <div class='save'>
+            SAVE
+          </div>
+        </a>
+      </div>
     <div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
