made logo and styled
more styling

Style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class='content'>
     <div class='info'>
-      <h1> WebFX </h1>
+      <img src='./fonts/webfx.png' class='logo'/>
       <a target='_blank' class='github-link' href='http://www.github.com/joetessy/WebFX'>
         <i class="devicon-github-plain"></i>
       </a>
