changed some typos
try playback list

try playback list

try playback list

Playback List

--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
             SAVE
           </div>
         </a>
+        <ul class='recordings'>
+        </ul>
       </div>
     <div>
   </div>
