--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
   <div class='content'>
     <div class='info'>
       <img src='./fonts/webfx.png' class='logo'/>
-      <a target='_blank' class='github-link' href='http://www.github.com/joetessy/WebFX'>
-        <i class="devicon-github-plain"></i>
-      </a>
+      <div class='social-links'>
+        <a target='_blank' class='github-link' href='http://www.github.com/joetessy/WebFX'>
+          <i class="devicon-github-plain"></i>
+        </a>
+        <a target='_blank' class='github-link' href='https://www.linkedin.com/in/joe-tessy-a528332a/'>
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+      </div>
       <div class='instructions-container'>
         <h2> INSTRUCTIONS </h2>
         <p>Microphone</p>
