--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
       </div>
       <div class='instructions-container'>
-        <h2> INSTRUCTIONS </h2>
+        <h2> Instructions </h2>
         <p>Microphone</p>
           <div class='instructions'>
             <ul>
@@ -52,6 +52,17 @@
             </li>
           </ul>
         </div>
+        <p> Recording </p>
+          <div class='instructions'>
+            <ul>
+              <li>
+                Click red recording button to start/stop recording
+              </li>
+              <li>
+                Click green save button to download
+              </li>
+            </ul>
+          </div>
       </div>
       <div class='user-controls'>
         <div class='controls-container'>
@@ -97,21 +108,21 @@
       </a>
     </div>
     <div class=effects>
-      <div class='volume-effect'>
+      <div class='effect'>
         <h2> Volume </h2>
         <div class='volume-controls'>
-          <div class='volume-on-container'/>
+          <div class='volume-module-item'/>
             <div id='on-off' class='audio-off'>ON/OFF</div>
           </div>
-          <div class='waveform-container'>
+          <div class='volume-module-item'>
             <canvas class='waveform'></canvas>
           </div>
-          <div class='volume-slider-container'>
+          <div class='volume-module-item'>
             <div id='volume'></div>
           </div>
         </div>
       </div>
-      <div class='delay-effect'>
+      <div class='effect'>
         <div class='delay-container'>
           <h2> Delay </h2>
           <div class='delay-controls'>
@@ -137,7 +148,7 @@
           </div>
         </div>
       </div>
-      <div class='tremolo-effect'>
+      <div class='effect'>
         <h2> Tremolo </h2>
         <div class='tremolo-controls'>
           <div class='tremolo-on-container'/>
