--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class='instructions-container'>
         <h2> Instructions </h2>
-        <p>Microphone</p>
+        <p>Use Microphone</p>
           <div class='instructions'>
             <ul>
               <li>
@@ -41,7 +41,7 @@
               </li>
             </ul>
           </div>
-        <p>Samples</p>
+        <p>Play Samples</p>
         <div class='instructions'>
           <ul>
             <li>
@@ -52,7 +52,7 @@
             </li>
           </ul>
         </div>
-        <p> Recording </p>
+        <p>Record Audio</p>
           <div class='instructions'>
             <ul>
               <li>
