--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 Select 'Input On'
               </li>
               <li>
-                Click 'ON' button in volume module
+                Click 'ON' at volume module
               </li>
             </ul>
           </div>
@@ -45,10 +45,21 @@
         <div class='instructions'>
           <ul>
             <li>
-              Click 'ON' button in volume module
+              Push 'ON' at volume module
             </li>
             <li>
               Trigger samples with play buttons
+            </li>
+          </ul>
+        </div>
+        <p>Effects</p>
+        <div class='instructions'>
+          <ul>
+            <li>
+              Push 'ON' at Delay / Tremolo
+            </li>
+            <li>
+              Adjust Controls
             </li>
           </ul>
         </div>
@@ -63,41 +74,41 @@
               </li>
             </ul>
           </div>
-      </div>
-      <div class='user-controls'>
-        <div class='controls-container'>
-          <div class='select-input'>
-            <li>
-              <input type="radio"
-              name="input"
-              value="off"
-              onclick='initAudio()'> <h3>Input On</h3>
-            </li>
-            <li>
-              <input type="radio" checked name="input" value="on"
-                onclick='cancelAudio()'> <h3>Input Off</h3><br>
-            </li>
-          </div>
-          <div class='samples'>
-            <ul>
-              <li>
-                <h3>Sample 1: </h3><div class='sample-item' id='play1'>
-                  <i class="fa fa-play"></i>
-                </div>
-              </li>
-              <li>
-              <h3>Sample 2: </h3><div class='sample-item' id='play2'>
-                <i class="fa fa-play"></i>
+          <div class='user-controls'>
+            <div class='controls-container'>
+              <div class='select-input'>
+                <li>
+                  <input type="radio"
+                  name="input"
+                  value="off"
+                  onclick='myAudio.initAudio()'> <h3>Input On</h3>
+                </li>
+                <li>
+                  <input type="radio" checked name="input" value="on"
+                  onclick='myAudio.cancelAudio()'> <h3>Input Off</h3><br>
+                </li>
               </div>
-              </li>
-              <li>
-              <h3>Sample 3: </h3><div class='sample-item' id='play3'>
-                <i class="fa fa-play"></i>
+              <div class='samples'>
+                <ul>
+                  <li>
+                    <h3>Sample 1: </h3><div class='sample-item' id='play1'>
+                      <i class="fa fa-play"></i>
+                    </div>
+                  </li>
+                  <li>
+                    <h3>Sample 2: </h3><div class='sample-item' id='play2'>
+                      <i class="fa fa-play"></i>
+                    </div>
+                  </li>
+                  <li>
+                    <h3>Sample 3: </h3><div class='sample-item' id='play3'>
+                      <i class="fa fa-play"></i>
+                    </div>
+                  </li>
+                </ul>
               </div>
-              </li>
-            </ul>
+            </div>
           </div>
-        </div>
       </div>
 
       <a class='site-button' target='_blank'
