--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <i class="fa fa-question-circle delay-question" aria-hidden="true"></i>
           <div class='delay-instructions'>
             <li>
-              Click OFF button to initialize Delay
+              Toggle ON/OFF button to stop/start Delay
             </li>
             <li>
               Control delay speed with 'Speed' slider
@@ -166,7 +166,7 @@
           <h2> Delay </h2>
           <div class='delay-controls'>
             <div class='delay-on-container'/>
-              <div id='delay-on-off' class='delay-off'>OFF</div>
+              <div id='delay-on-off' class='delay-off'>ON/OFF</div>
             </div>
             <div class='delay-speed-slider-container'>
               <h3> Speed </h3>
@@ -191,7 +191,7 @@
         <i class="fa fa-question-circle tremolo-question" aria-hidden="true"></i>
         <div class='tremolo-instructions'>
           <li>
-            Click 'OFF' button to initialize Tremolo
+            Toggle 'ON/OFF' button to start/stop Tremolo
           </li>
           <li>
             Control minimum gain with 'Depth' slider
@@ -203,7 +203,7 @@
         <h2> Tremolo </h2>
         <div class='tremolo-controls'>
           <div class='tremolo-on-container'/>
-            <div id='tremolo-on-off' class='tremolo-off'>OFF</div>
+            <div id='tremolo-on-off' class='tremolo-off'>ON/OFF</div>
           </div>
 
           <div class='tremolo-depth-slider-container'>
@@ -226,7 +226,7 @@
             Click red button to start/stop recording
           </li>
           <li>
-            After stopping recording. Click green 'Save' button to download recording
+            After finished recording, Click 'Save' button to download.
           </li>
         </div>
         <h2>Record</h2>
