made instructions more concise

--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
               Toggle ON/OFF button to stop/start Delay
             </li>
             <li>
-              Control delay speed with 'Speed' slider
+              Speed Slider: delay speed
             </li>
             <li>
-              Control delay decay with 'Length' slider
+              Length Slider: delay decay
             </li>
             <li>
-              Control delay volume with 'Level' slider
+              Level Slider: delay volume
             </li>
             <li>
-              Control delay cutoff frequency with 'Filter' slider
+              Filter Slider: delay cutoff freq
             </li>
           </div>
           <h2> Delay </h2>
@@ -194,10 +194,10 @@
             Toggle 'ON/OFF' button to start/stop Tremolo
           </li>
           <li>
-            Control minimum gain with 'Depth' slider
+            Depth slider: minimum gain
           </li>
           <li>
-            Control oscillation speed with 'Speed' slider
+            Speed slider: gain oscillation speed
           </li>
         </div>
         <h2> Tremolo </h2>
@@ -223,10 +223,10 @@
         <i class="fa fa-question-circle record-question" aria-hidden="true"></i>
         <div class='record-instructions'>
           <li>
-            Click red button to start/stop recording
+            Red Button: toggle start/stop recording
           </li>
           <li>
-            After finished recording, Click 'Save' button to download.
+            Save Button: download recording
           </li>
         </div>
         <h2>Record</h2>
