made instructions more concise

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class='instructions-container'>
         <h2> Instructions </h2>
-        <p>Use Microphone</p>
+        <p>Microphone</p>
           <div class='instructions'>
             <ul>
               <li>
@@ -40,15 +40,15 @@
                 Select 'Input On'
               </li>
               <li>
-                Click 'ON' at volume module
+                Click 'ON/OFF' at volume module
               </li>
             </ul>
           </div>
-        <p>Play Samples</p>
+        <p>Samples</p>
         <div class='instructions'>
           <ul>
             <li>
-              Push 'ON' at volume module
+              Click 'ON/OFF' at volume module
             </li>
             <li>
               Trigger samples with play buttons
@@ -59,7 +59,7 @@
         <div class='instructions'>
           <ul>
             <li>
-              Push 'ON' at Delay / Tremolo
+              Click 'ON/OFF' at Delay / Tremolo
             </li>
             <li>
               Adjust Controls
