made instructions more concise

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <i class="fa fa-question-circle volume-question" aria-hidden="true"></i>
         <div class='volume-instructions'>
           <li>
-            Toggle ON/OFF button to start/stop audio.
+            ON/OFF: start/stop audio
           </li>
           <li>
             Control volume with slider
@@ -148,7 +148,7 @@
           <i class="fa fa-question-circle delay-question" aria-hidden="true"></i>
           <div class='delay-instructions'>
             <li>
-              Toggle ON/OFF button to stop/start Delay
+              ON/OFF: start/stop delay
             </li>
             <li>
               Speed Slider: delay speed
@@ -191,7 +191,7 @@
         <i class="fa fa-question-circle tremolo-question" aria-hidden="true"></i>
         <div class='tremolo-instructions'>
           <li>
-            Toggle 'ON/OFF' button to start/stop Tremolo
+            ON/OFF: start/stop tremolo
           </li>
           <li>
             Depth slider: minimum gain
