make styling changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a target='_blank' class='github-link' href='http://www.github.com/joetessy/WebFX'>
           <i class="devicon-github-plain"></i>
         </a>
-        <a target='_blank' class='github-link' href='https://www.linkedin.com/in/joe-tessy-a528332a/'>
+        <a target='_blank' class='github-link' href='http://www.linkedin.com/in/joetessy'>
           <i class="fa fa-linkedin" aria-hidden="true"></i>
         </a>
       </div>
@@ -151,16 +151,16 @@
               ON/OFF: start/stop delay
             </li>
             <li>
-              Speed Slider: delay speed
+              Speed: Control delay time
             </li>
             <li>
-              Length Slider: delay decay
+              Length: Control delay decay
             </li>
             <li>
-              Level Slider: delay volume
+              Level: Control delay volume
             </li>
             <li>
-              Filter Slider: delay cutoff freq
+              Filter: Control delay cutoff freq
             </li>
           </div>
           <h2> Delay </h2>
@@ -194,10 +194,10 @@
             ON/OFF: start/stop tremolo
           </li>
           <li>
-            Depth slider: minimum gain
+            Depth: Control minimum gain
           </li>
           <li>
-            Speed slider: gain oscillation speed
+            Speed: Control oscillation speed
           </li>
         </div>
         <h2> Tremolo </h2>
@@ -223,14 +223,16 @@
         <i class="fa fa-question-circle record-question" aria-hidden="true"></i>
         <div class='record-instructions'>
           <li>
-            Red Button: toggle start/stop recording
+            RECORD: start/stop recording
           </li>
           <li>
-            Save Button: download recording
+            SAVE: download recording
           </li>
         </div>
         <h2>Record</h2>
-        <div class='record-off recorder'></div>
+        <div class='record-off recorder'>
+          RECORD
+        </div>
         <a id="save" href="#">
           <div class='save'>
             SAVE
