--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <i class="fa fa-question-circle volume-question" aria-hidden="true"></i>
         <div class='volume-instructions'>
           <li>
-            ON/OFF: start/stop audio
+            ON/OFF: Start/stop audio
           </li>
           <li>
             Control volume with slider
@@ -148,7 +148,7 @@
           <i class="fa fa-question-circle delay-question" aria-hidden="true"></i>
           <div class='delay-instructions'>
             <li>
-              ON/OFF: start/stop delay
+              ON/OFF: Start/stop delay
             </li>
             <li>
               Speed: Control delay time
@@ -191,7 +191,7 @@
         <i class="fa fa-question-circle tremolo-question" aria-hidden="true"></i>
         <div class='tremolo-instructions'>
           <li>
-            ON/OFF: start/stop tremolo
+            ON/OFF: Start/stop tremolo
           </li>
           <li>
             Depth: Control minimum gain
@@ -223,10 +223,10 @@
         <i class="fa fa-question-circle record-question" aria-hidden="true"></i>
         <div class='record-instructions'>
           <li>
-            RECORD: start/stop recording
+            RECORD: Start/stop recording
           </li>
           <li>
-            SAVE: download recording
+            SAVE: Download recording
           </li>
         </div>
         <h2>Record</h2>
