--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 Plug in headphones
               </li>
               <li>
-                Select 'Input On'
+                Click 'ON/OFF' at Input below
               </li>
               <li>
                 Click 'ON/OFF' at volume module
